# programs

./: CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  README.md
algorithms/divide/: power.c
algorithms/graphs/: dijkstra.go  graph.go  graph_test.go  kruskal.go
algorithms/hash/: README.md  elf.c
algorithms/misc/: README.md  fill.c  power_of_two.c
algorithms/sorting/bubblesort/: bubblesort.rb
algorithms/sorting/heapsort/: heapsort.c
algorithms/sorting/insertsort/: insertsort.c  insertsort.py
algorithms/sorting/mergesort/: mergesort.py
algorithms/sorting/quicksort/: description.txt  quicksort.c  quicksort.go  quicksort.pl  quicksort.py
algorithms/trees/: README.md
lang/bash/: lorem.sh
lang/c/: clock.c  union.c
lang/c++/: CMakeLists.txt  lambda.cpp  moving.cpp  smart_ptr.cpp  template_type_deduction.cpp
lang/documentation/: sgbd.txt
lang/go/: README.md  timeout.go
lang/go/concurrency/: all.sh  common.go  fan_in.go  fib.go  google.go  quit.go  sieve.go  timeout.go
lang/go/interfaces/: reader_writer.go  sort.go
lang/go/misc/: all.sh  decorators.go  json.go  redis.go
lang/go/misc/data/: config.json
lang/perl/: basics.pl  closures.pl  oop.pl  package.pl  references.pl
lang/python/: basics.py  context.py  decorators.py  oop.py
lang/ruby/: flip_flop.rb  rom.rb  socket.rb  virtual.rb
lang/scala/: basics.scala  oop.scala  pattern.scala  re.scala
net/: CMakeLists.txt  streaming.rb
net/include/: transport.h
net/tcp/: Makefile  client.c  server.c
net/udp/: Makefile  README.md  client.c  server.c  udp.h
os/: CMakeLists.txt  README.md  append_and_seek.c  io.c  itimer.c  mmap.c  sibling.c  signal.c
